kubernetes/books-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bff-books
  name: bff-books
  namespace: book-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-books
  template:
    metadata:
      labels:
        app: bff-books
    spec:
      containers:
        - name: bff-books
          image: bff-books-service:1.0
          imagePullPolicy: Never

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bff-books-service
  namespace: book-ns
spec:
  type: ClusterIP
  selector:
    app: bff-books
  ports:
    - port: 8080
      targetPort: 8080
