kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bff-frontend
  name: bff-frontend
  namespace: book-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-frontend
  template:
    metadata:
      labels:
        app: bff-frontend
    spec:
      containers:
        - name: bff-frontend
          image: bff-frontend:1.0
          imagePullPolicy: Never
          ports:
            - containerPort: 1805
---
apiVersion: v1
kind: Service
metadata:
  name: bff-frontend-service
  namespace: book-ns
spec:
  type: ClusterIP
  selector:
    app: bff-frontend
  ports:
    - name: http
      port: 1805
      targetPort: 1805
