kubernetes/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bff-gateway
  name: bff-gateway
  namespace: book-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-gateway
  template:
    metadata:
      labels:
        app: bff-gateway
    spec:
      containers:
        - name: bff-gateway
          image: bff-gateway:1.0
          imagePullPolicy: Never

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bff-gateway-service
  namespace: book-ns
spec:
  type: NodePort
  selector:
    app: bff-gateway
  ports:
    - name: http
      port: 8080
      targetPort: 8080
