kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: my-redis
  name: my-redis
  namespace: data-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-redis
  template:
    metadata:
      labels:
        app: my-redis
    spec:
      containers:
        - name: my-redis
          image: redis:alpine
          imagePullPolicy: Always
          command: ["redis-server"]
          args: ["--requirepass $(REDIS_PASS)"]
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: data-ns
spec:
  type: ClusterIP
  selector:
    app: my-redis
  ports:
    - port: 6379
      targetPort: 6379
