kubernetes/web-sockets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bff-web-sockets
  name: bff-web-sockets
  namespace: book-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bff-web-sockets
  template:
    metadata:
      labels:
        app: bff-web-sockets
    spec:
      containers:
        - name: bff-web-sockets
          image: bff-web-sockets-service:1.0
          imagePullPolicy: Never

          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bff-web-sockets-service
  namespace: book-ns
spec:
  type: ClusterIP
  selector:
    app: bff-web-sockets
  ports:
    - port: 8080
      targetPort: 8080
