kubernetes/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: book-ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  backend:
    serviceName: bff-gateway-service
    servicePort: 8080
